<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linea4"
        android:layout_width="5dp"
        android:layout_height="320dp"
        android:layout_marginStart="256dp"
        android:layout_marginLeft="256dp"
        android:layout_marginTop="216dp"
        android:background="#009688"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="67dp"
        android:layout_height="82dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb7"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/X"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb8"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/O"
            android:textSize="20sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="59dp"
        android:layout_height="74dp"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="216dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/X"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/O"
            android:textSize="20sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linea2"
        android:layout_width="338dp"
        android:layout_height="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="416dp"
        android:background="#009688"
        android:contentDescription="@string/linea"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <LinearLayout
        android:id="@+id/linea1"
        android:layout_width="336dp"
        android:layout_height="6dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="300dp"
        android:background="#009688"
        android:contentDescription="@string/linea"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="66dp"
        android:layout_height="68dp"
        android:layout_marginStart="276dp"
        android:layout_marginLeft="276dp"
        android:layout_marginTop="216dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb5"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/X"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb6"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/O"
            android:textSize="20sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="65dp"
        android:layout_height="77dp"
        android:layout_marginStart="276dp"
        android:layout_marginLeft="276dp"
        android:layout_marginTop="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb11"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/X"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb12"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/O"
            android:textSize="20sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linea3"
        android:layout_width="5dp"
        android:layout_height="320dp"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="216dp"
        android:background="#009688"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup8"
        android:layout_width="63dp"
        android:layout_height="73dp"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="440dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb15"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/X"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb16"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/O"
            android:textSize="20sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="63dp"
        android:layout_height="79dp"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb9"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/X"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb10"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/O"
            android:textSize="20sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="66dp"
        android:layout_height="73dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="216dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/X"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/O"
            android:textSize="20sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="70dp"
        android:layout_height="73dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="436dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb13"
            android:layout_width="69dp"
            android:layout_height="32dp"
            android:text="@string/X"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb14"
            android:layout_width="67dp"
            android:layout_height="36dp"
            android:text="@string/O"
            android:textSize="20sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup9"
        android:layout_width="66dp"
        android:layout_height="69dp"
        android:layout_marginStart="284dp"
        android:layout_marginLeft="284dp"
        android:layout_marginTop="440dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb17"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/X"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb18"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="@string/O"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/s1"
        android:textColor="#2196F3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginLeft="232dp"
        android:layout_marginTop="108dp"
        android:text="@string/s3"
        android:textSize="16sp"
        app:backgroundTint="#FF9800"
        app:icon="@android:drawable/ic_menu_rotate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="108dp"
        android:text="@string/s2"
        android:textSize="16sp"
        app:backgroundTint="#4CAF50"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="552dp"
        android:text="@string/vacio"
        android:textColor="#9C27B0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="155dp"
        android:layout_height="34dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="73dp"
            android:layout_height="32dp"
            android:text="@string/val1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="77dp"
            android:layout_height="35dp"
            android:text="@string/val2" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="44dp"
        android:text="@string/s4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="176dp"
        android:text="@string/s6"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>